--- a/last homework in html/style.css
+++ b/last homework in html/style.css
@@ -7,7 +7,7 @@ body {
 header {
   padding: 2.5rem;
   display: flex;
-  background-color: #0e1d34;
+  background-color: #0b172a;
   width: 100%;
   height: 7rem;
 }
@@ -45,4 +45,45 @@ header a {
 header li {
   margin-top: 0.4rem;
   opacity: 0.3;
+}
+.first {
+  background-image: url(./slike/depositphotos_119168998-stock-illustration-dotted-world-map-of-hexagonal.webp);
+  background-color: #0e1d34;
+  height: 80%;
+}
+.first h1 {
+  font-size: 3rem;
+  font-weight: bolder;
+  width: 35rem;
+  color: white;
+  padding: 2.5rem;
+  margin-left: 4rem;
+}
+.first p {
+  width: 45rem;
+  margin-top: -5rem;
+  color: rgba(255, 255, 255, 0.735);
+  padding: 2.5rem;
+  margin-left: 4.3rem;
+}
+form {
+  margin-top: -1rem;
+  margin-left: 6.5rem;
+  height: 5rem;
+}
+input {
+  padding-left: 2rem;
+  border-radius: 0.5rem;
+  height: 5.5rem;
+  width: 40rem;
+  border: 1px white;
+}
+.forma button {
+  color: white;
+  border: 1px #0d42ff;
+  background-color: #0d42ff;
+  border-radius: 0.5rem;
+  width: 7rem;
+  height: 4rem;
+  margin-left: -8rem;
 }
